<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cronus</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_ti">Add TI</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="continar">Continue</string>
    <string name="add_tempo_investido">Add invested time</string>
    <string name="nome_ti">Name Ti</string>
    <string name="compara_semana">Compare weeks</string>
    <string name="resumo_semanal">Weekly summary</string>
    <string name="total_horas">Total of invested hours: </string>
    <string name="prioridade">Priority: </string> 
    <string name="proporcao">Proportion: </string> 
    <string name="name">Name: </string> 
    <string name="time">Time (in minutes): </string> 
    
	<string-array name="priority_array">
  		<item>High</item> 
 		<item>Medium</item> 
		<item>Low</item> 
 	</string-array>
 	<string name="nao_add_ti_ontem">You did not add any task yesterday</string>
 	<string name="pagina_inicial">Main page</string>
 	
 	<string name="semana2">2 weeks</string>
    <string name="semana1">1 week</string>
    <string name="semana_atual">Current week</string>
    
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    
    

</resources>
