<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    android:gravity="center|bottom"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="bottom"
        android:orientation="vertical" >

        <!--
android:fontFamily="sans-serif"           // roboto regular
android:fontFamily="sans-serif-light"     // roboto light
android:fontFamily="sans-serif-condensed" // roboto condensed
android:fontFamily="sans-serif-thin"      // roboto thin (android 4.2)
        -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/add_tempo_investido"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/nome_ti"
            android:textSize="18sp" 
            android:textColor="@color/white"/>

        <MultiAutoCompleteTextView
            android:id="@+id/name_ti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:completionThreshold="3"
            android:maxLength="30"
            android:focusableInTouchMode="true"/>
        
        <LinearLayout 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:gravity="center" 
            android:orientation="horizontal">
 			
 			<TextView android:id="@+id/name_priority" 
 			    android:layout_height="wrap_content" 
 			    android:layout_width="0dp" 
 			    android:layout_weight="0.60"
 			    android:layout_marginTop="15dp"
 			    android:textSize="15sp" 
 			    android:text="@string/prioridade" 
 			    android:layout_marginLeft="10dp"
 			    android:textColor="@color/white" /> 

  			<Spinner
  			    android:id="@+id/priority"
  			    android:layout_width="0dp"
  			    android:layout_height="wrap_content"
  			    android:layout_marginTop="15dp"
  			    android:layout_weight="0.97"/>
 
  			</LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <NumberPicker
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <NumberPicker
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/botaoOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/BotaoCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>