<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    
    android:background="@drawable/bg">

    <ImageView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/nome" />

    
    <!-- botao google -->
    <LinearLayout
        android:id="@+id/llProfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:visibility="gone">
 
        <ImageView
            android:id="@+id/imgProfilePic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"/>
 
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_weight="2" >
 
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="20dp" />
 
            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        
        <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_sign_in"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >
    </com.google.android.gms.common.SignInButton>
    
    <Button
        android:id="@+id/buttonContinuar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/continar"
        android:visibility="gone"/>
    
    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout_from_google"
        android:visibility="gone"/>
 
    <Button
        android:id="@+id/btn_revoke_access"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_revoke_access"
        android:visibility="gone"/>
    </LinearLayout>
   

</LinearLayout>